refer to the README.txt file for additional information on installing the 
Distribution and to be informed about important information on distribution 
lay-out.

Changes from 1.123 to 1.124
---------------------------
(November 2023)

* updated contact meta-data for ArmeSFo authority (AM)
* removed discontinued AEGIS authority (RS)

Changes from 1.122 to 1.123
---------------------------
(4 September 2023)

* Add ECC private trust hierarchy for GEANT (Research and Education) TCS (EU)
* Added accrdited private trust eMudhra IGTF root and issuers (IN)

Changes from 1.121 to 1.122
---------------------------
(7 August 2023)

* Added private trust hierarchy for GEANT (Research and Education) TCS (EU)
* Added accredited eMudhra joint public trust root and issuing CAs (IN)
* Added private trust eMudhra IGTF root and issuers as experimental (IN, US)

NOTICE: in future releases we will move to a new RSA-2048 GPG package signing
key. The new public key file, GPG-KEY-EUGridPMA-RPM-4, is distributed with
this and subsequent releases. You can retrieve the new public key file from 
  https://dl.igtf.net/distribution/GPG-KEY-EUGridPMA-RPM-4

Changes from 1.120 to 1.121
---------------------------
(15 June 2023)

* Added accredited (classic) InCommon RSA IGTF Server CA 3 under the
  Sectigo USERTrust RSA root, for which namespaces have been updated (US)

Changes from 1.119 to 1.120
---------------------------
(30 May 2023)

* Added transitional CDP mirror URLs for retiring DigitalTrust CAs (AE)
* Removed discontinued NIIF-Root-CA-2 (HU)
* Removed expiring GermanGrid (GridKA CrossGrid) CA (DE)

Changes from 1.118 to 1.119
---------------------------
(13 March 2023)

* Updated UKeScience Root (2007) wih consistent string encodings (UK)
* Removed obsolete SHA1 subordinates DigiCertGridTrustCA-Classic
  and DigiCertGridCA-1-Classic from DigiCert, reflected in RPDNC namespaces
* Experimental (non-accredited) new InCommon RSA IGTF Server CA 2 (ICA under 