@@ -5,7 +5,7 @@ alias = DigitalTrustAssuredCAG4-runbytheissuer
 ca_url = http://digitaltrust.crt.sectigo.com/DigitalTrustAssuredCAG4.crt
 crl_url = http://dl.igtf.net/mirror/DigitalTrust/DigitalTrustAssuredCAG4.crl;http://digitaltrust.crl.sectigo.com/DigitalTrustAssuredCAG4.crl
 email = ca-admins@digitaltrust.ae
-status = accredited:classic
+status = discontinued
 url = http://digitaltrustgrid.ae/Grid/
 requires = USERTrustRSACertificationAuthority
 version = @VERSION@
