@@ -6,7 +6,7 @@ ca_url = http://crt.ca.kenet.or.ke/KENETROOTCA.crt
 crl_url = http://crl.ca.kenet.or.ke/KENETROOTCA.crl
 policy_url = https://ca.kenet.or.ke/media/kenet-draft-cp-cps-v-1.0.1.pdf
 email = ca@kenet.or.ke
-status = accredited:classic
+status = discontinued
 url = https://ca.kenet.or.ke/
 version = @VERSION@
 sha1fp.0 = @SHA1FP.0@
