@@ -115,3 +115,11 @@ DigiCertGridCA-1-Classic
 NIIF-Root-CA-2
 GermanGrid
 AEGIS
+KENETCA-ICA-2015
+KENETROOTCA
+SDG-G2
+CNIC
+DigitalTrustAssuredCAG3-runbytheissuer
+DigitalTrustAssuredCAG4-runbytheissuer
+DigitalTrustSecureCAG3-runbytheissuer
+DigitalTrustSecureCAG4-runbytheissuer
